fix menu header on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,9 +269,6 @@ body {
 }
 
 /* SERVICES */
-.servicesWrap {
-
-}
 .services__item {
     margin-top: 10rem;
     padding-right: 5rem;
